--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.3.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
